[package]
name = "wtransport-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wtransport = { version = "0.1.1", git = "https://github.com/BiagioFesta/wtransport.git", rev = "193b7f2137e98bb09397b13965052d370ca319c1" }
log = "0.4.19"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tokio-util = "0.7.8"
